--- a/templates/form_visitas.html
+++ b/templates/form_visitas.html
@@ -119,6 +119,7 @@
                                                         {% if visita.ward == 'Oncologia' %}bg-dark{% endif %}
                                                         {% if visita.ward == 'Cirurgia' %}bg-success{% endif %}
                                                         {% if visita.ward == 'UTI' %}bg-secondary{% endif %}
+                                                        {% if visita.ward == 'UTI Cardio e Adulto' %}bg-primary{% endif %}
                                                     ">
                                                         {{ visita.ward }}
                                                     </span>
